--- a/index.html
+++ b/index.html
@@ -349,6 +349,21 @@
 
 </ul>
 </div>
+<div class="footer-section-three">
+    <form class="email-for">
+        
+        <label class="label-email">Subscribe</label>
+        <div class="email">
+        <input type="email" name="email" placeholder="E-mail" class="email-row">
+
+        <button type="submit" class="submit-email-button">Subscribe
+            <svg class="send-svg" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+            </svg>
+        </button>
+    </div>
+    </form>
+</div>
 </div>
 </footer>
 
