--- a/index.html
+++ b/index.html
@@ -374,8 +374,19 @@
         <use href="./images/icons.svg#close"></use>
     </svg>
 </button>
-
+<p class="window-text"> Leave your contacts and we will call you back</p>
+<form>
+    <label>Name</label>
+    <div class="svg-name">
+    <input type="text" name="name">
+    <svg width="18" heigth="18" class="name-icon">
+        <use href="./images/icons.svg#name"></use>
+    </svg>
 </div>
+
+</form>
+</div>
+
 </div>
 <script src="./js/modal.js"></script>
 </body>
