--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 </div>
 </footer>
 
-<div data-modal class="modal is-hidden">
+<div data-modal class="modal ">
     <div class="window">
 <button type="button" data-modal-close class="modal-button">
     <svg class="modal-window-close" width="8" height="8">
@@ -375,15 +375,23 @@
     </svg>
 </button>
 <p class="window-text"> Leave your contacts and we will call you back</p>
-<form>
-    <label>Name</label>
+<form class="form">
+    <label class="label-form">
+        <span class="label-name">Name</span>
     <div class="svg-name">
-    <input type="text" name="name">
+    <input type="text" name="name" class="input-form">
     <svg width="18" heigth="18" class="name-icon">
         <use href="./images/icons.svg#name"></use>
     </svg>
 </div>
-
+<span class="label-name">Name</span>
+    <div class="svg-name">
+    <input type="text" name="name" class="input-form">
+    <svg width="18" heigth="18" class="name-icon">
+        <use href="./images/icons.svg#name"></use>
+    </svg>
+</div>
+</label>
 </form>
 </div>
 
