--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     <div class="svg-name">
     <input type="text" name="name" class="input-form">
     <svg width="18" heigth="18" class="name-icon">
-        <use href="./images/icons.svg#name"></use>
+        <use href="./images/icons.svg#email"></use>
     </svg>
 </div>
 </label>
