--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
 </div>
 <div class="footer-section-three">
     <form class="email-for">
-        
-        <label class="label-email">Subscribe</label>
+        <p>Subscribe</p>
+        <label class="label-email">
         <div class="email">
         <input type="email" name="email" placeholder="E-mail" class="email-row">
 
@@ -362,6 +362,7 @@
             </svg>
         </button>
     </div>
+    </label>
     </form>
 </div>
 </div>
