--- a/index.html
+++ b/index.html
@@ -349,20 +349,17 @@
 
 </ul>
 </div>
-<div class="footer-section-three">
-    <form class="email-for">
-        <p>Subscribe</p>
-        <label class="label-email">
-        <div class="email">
-        <input type="email" name="email" placeholder="E-mail" class="email-row">
-
-        <button type="submit" class="submit-email-button">Subscribe
-            <svg class="send-svg" width="24" height="24">
-                <use href="./images/icons.svg#send"></use>
-            </svg>
-        </button>
-    </div>
-    </label>
+<div class="footer-email">
+    <p class="subscribe-text">Subscribe</p>
+    <form class="subscribe-email">
+        <label class="subscribe-email-label">
+            <input name="subscribe-email" type="email" placeholder="E-mail" class="subscribe-email-input">
+            <button type="submit" class="submit-email-button">Subscribe
+                <svg width="24" height="24" class="subscribe-svg">
+                    <use href="./images/icons.svg#send"></use>
+                </svg>
+            </button>
+        </label>
     </form>
 </div>
 </div>
