--- a/index.html
+++ b/index.html
@@ -366,31 +366,24 @@
 </div>
 </footer>
 
-<div data-modal class="modal ">
+<div data-modal class="modal is-hidden">
     <div class="window">
 <button type="button" data-modal-close class="modal-button">
     <svg class="modal-window-close" width="8" height="8">
         <use href="./images/icons.svg#close"></use>
     </svg>
 </button>
-<p class="window-text"> Leave your contacts and we will call you back</p>
-<form class="form">
-    <label class="label-form">
-        <span class="label-name">Name</span>
-    <div class="svg-name">
-    <input type="text" name="name" class="input-form">
-    <svg width="18" heigth="18" class="name-icon">
-        <use href="./images/icons.svg#name"></use>
-    </svg>
-</div>
-<span class="label-name">Name</span>
-    <div class="svg-name">
-    <input type="text" name="name" class="input-form">
-    <svg width="18" heigth="18" class="name-icon">
-        <use href="./images/icons.svg#email"></use>
-    </svg>
-</div>
-</label>
+<p class="modal-window-text">Leave your contacts and we will call you back</p>
+<form>
+    <div class="modal-window-form">
+        <label class="modal-window-label" for="user-name">Name</label>
+    <div class="modal-window-input-div">
+<input id="user-name" name="user-name" type="text" class="modal-window-input">
+<svg width="18" height="24" class="modal-window-user-svg">
+    <use href="./images/icons.svg#name"
+</svg>
+    </div>
+    </div>
 </form>
 </div>
 
