--- a/index.html
+++ b/index.html
@@ -380,7 +380,16 @@
     <div class="modal-window-input-div">
 <input id="user-name" name="user-name" type="text" class="modal-window-input">
 <svg width="18" height="24" class="modal-window-user-svg">
-    <use href="./images/icons.svg#name"
+    <use href="./images/icons.svg#name"></use>
+</svg>
+    </div>
+    </div>
+    <div class="modal-window-form">
+        <label class="modal-window-label" for="user-phone">Phone</label>
+    <div class="modal-window-input-div">
+<input id="user-phone" name="user-phone" type="tel" class="modal-window-input">
+<svg width="18" height="24" class="modal-window-user-svg">
+    <use href="./images/icons.svg#phone"></use>
 </svg>
     </div>
     </div>
