--- a/index.html
+++ b/index.html
@@ -393,6 +393,15 @@
 </svg>
     </div>
     </div>
+    <div class="modal-window-form">
+        <label class="modal-window-label" for="user-name">Email</label>
+    <div class="modal-window-input-div">
+<input id="user-email" name="user-email" type="email" class="modal-window-input">
+<svg width="18" height="24" class="modal-window-user-svg">
+    <use href="./images/icons.svg#email"></use>
+</svg>
+    </div>
+    </div>
 </form>
 </div>
 
