--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@
 </svg>
     </div>
     </div>
+    <div class="modal-window-comment-div">
+<label for="user-comment" class="modal-window-label">Comment</label>
+<textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
+    </div>
 </form>
 </div>
 
