--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
 <label for="user-comment" class="modal-window-label">Comment</label>
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
+    <div class="checkbox-label-div">
+        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="user-privacy-input vissualy-hidden">
+        <label for="user-privacy" class="user-privacy-label">I accept the terms and conditions of the<span class="user-privacy-label-span"></span></label>
+    </div>
 </form>
 </div>
 
