--- a/index.html
+++ b/index.html
@@ -407,8 +407,12 @@
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
     <div class="checkbox-label-div">
-        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="user-privacy-input vissualy-hidden">
-        <label for="user-privacy" class="user-privacy-label">I accept the terms and conditions of the<span class="user-privacy-label-span"></span></label>
+        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden is-hidden">
+        <label for="user-privacy" class="user-privacy-label">I accept the terms and conditions of the<span class="user-privacy-label-span">
+            <svg width="10" height="8" class="check-svg">
+                <use href="./images/icons.svg#check"
+            </svg>
+        </span></label>
     </div>
 </form>
 </div>
