--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
     <div class="checkbox-label-div">
-        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden is-hidden">
+        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden checkbox">
         <label for="user-privacy" class="user-privacy-label">I accept the terms and conditions of the<span class="user-privacy-label-span">
             <svg width="10" height="8" class="check-svg">
-                <use href="./images/icons.svg#check"
+                <use href="./images/icons.svg#check"></use>
             </svg>
         </span></label>
     </div>
