--- a/index.html
+++ b/index.html
@@ -407,13 +407,16 @@
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
     <div class="checkbox-label-div">
-        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden checkbox">
-        <label for="user-privacy" class="user-privacy-label">I accept the terms and conditions of the<span class="user-privacy-label-span">
+        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden">
+        <label for="user-privacy" class="user-privacy-label"><span class="user-privacy-label-span">
             <svg width="10" height="8" class="check-svg">
                 <use href="./images/icons.svg#check"></use>
             </svg>
-        </span></label>
+        </span>I accept the terms and conditions of the
+    <a class="policy-link" href="">Privacy Policy</a>
+    </label>
     </div>
+    <button class="send-button">Send</button>
 </form>
 </div>
 
