--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
     <div class="checkbox-label-div">
-        <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="vissualy-hidden">
+        <input class="vissualy-hidden checkbox" id="user-privacy" type="checkbox" value="true" name="user-privacy" >
         <label for="user-privacy" class="user-privacy-label"><span class="user-privacy-label-span">
             <svg width="10" height="8" class="check-svg">
                 <use href="./images/icons.svg#check"></use>
