--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
     <section class="second-section">
         <div class="container">
-        <h2 class="vissualy-hidden">Our +</h2>
+        <h2 class="visualy-hidden">Our +</h2>
         <ul class="list">
         <li><div class="icon-pluses">
      <svg width="64" height="64">
@@ -407,7 +407,7 @@
 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-window-textarea"></textarea>
     </div>
     <div class="checkbox-label-div">
-        <input class="vissualy-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy" />
+        <input class="visualy-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy" />
         <label for="user-privacy" class="user-privacy-label"><span class="user-privacy-label-span">
             <svg width="10" height="8" class="check-svg">
                 <use href="./images/icons.svg#check"></use>
