--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 <main>
     <section class="portfolio-section">
     <div class="container">
-        <h1 class="vissualy-hidden">buttons</h1>
+        <h1 class="visually-hidden">buttons</h1>
   
      <ul class="list button-list">
 
